frontend/app/assets/stylesheets/spree/frontend/frontend_bootstrap.css.scss
//Add your custom bootstrap variables here, see https://github.com/twbs/bootstrap-sass/blob/master/assets/stylesheets/bootstrap/_variables.scss for full list of variables.

@import "./variables";
@import "bootstrap";
@import "glyphicons";

// -- Spree Custom Header and Footer ---------------------
#spree-header {
  background-color: $primary;
  margin-bottom: $line-height-base;
  padding-top: 0.25em;

  #header {
    background: rgba($gray-900, 0.4);
  }

  #logo {
    margin-bottom: 10px;

    img {
      max-width: 100%;
      max-height: 5.5vmax;
    }
  }

  @media (max-width: 767px) {
    .navbar-nav > li > a {
      padding-top: 0;
      padding-bottom: 10px;
      line-height: $line-height-base;
    }
  }

  .navbar {
    padding: 0;
  }

  .nav-link {
    padding: $spacer;
  }

  .nav a {
    color: white;

    &:hover, &:focus {
      background: rgba($gray-900, 0.4);
    }
  }
}

// -- Spree Layout Custom Rules -------------------------

.alert-notice { @extend .alert-success; }
.alert-error { @extend .alert-danger; }
.alert-alert { @extend .alert-info; }

.progress-steps {
  margin-top: $line-height-base;
}

h1 {
  margin-bottom: 30px;
}

// Center cart line items
table {
  &.table > tbody > tr {
    &.line-item td, &.stock-item td {
      vertical-align: middle;
    }
  }

  &#line-items {
    > tbody, > tfoot {
      > tr > td {
        vertical-align: middle;

        &.order-qty {
          text-align: center;
        }
      }
    }
  }
}

#product-thumbnails {
  list-style: none;
}

// Updated credit-card image
#credit-card-image {
  margin-top: -10px;
}

.existing-credit-card-list td {
  padding: 5px;
}

.save-user-address-wrapper {
  display: inline-block;
}

